--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+  background:radial-gradient(180deg, #729ff3 27%, rgb(8, 103, 166) 40%, rgb(59, 59, 233) 50%);
+}
 h1{
   margin: 10px 10px;
   align-items: center;
@@ -7,20 +10,23 @@ h1{
   font-family:'Courier New', Courier, monospace;
   box-sizing: border-box;
 }
+#new{
+  display:flex;
+}
 .form-and-table-container {
   display:block;
-  justify-content: space-between; 
-  align-items: flex-start;
-  margin: 20px auto;
+  justify-content: space-between; /* Distribute space between form and table */
+  align-items: flex-start; /* Align items to the top */
+  margin: 20px auto; /* Adjust margins as needed */
   max-width: 1200px;
 
 }
 #RegistrationForm {
-  width: 500px;
-  margin-right: 20px;
-  padding: 20px;
-  border: 65px solid #480d71;
-  background:radial-gradient(180deg, #fff 27%, rgb(70, 159, 218) 40%, rgb(17, 104, 235) 50%);
+  width: 590px;
+  height: max-content;
+  /*margin-right: 0px;/*10*/
+  padding: 12px;
+  border: 49px solid #480d71;
 }
 label {
   display:contents;
@@ -41,17 +47,22 @@ input[type="file"] {
   border-radius: 3px;
 }
 #address{
-  width: 460px;
+  width: 370px;
   height: 20px;
 }
 #photo:hover{
   background-color: rgb(193, 216, 216);
 }
+.photo{
+  width: 20px;
+  margin: 10px;
+}
+
 #SubmitBtn{
-  padding: 10px 20px;
+  padding: 10px 20px; /* Adjust padding as needed for button size */
   width: 213px;
-  font-size: 26px;
-  background-color: #224780; 
+  font-size: 26px; /* Adjust font size as needed */
+  background-color: #224780; /* Button background color */
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -61,11 +72,11 @@ input[type="file"] {
   margin-bottom: 20px;
 }
 #ResetBtn{
-  padding: 10px 20px; 
+  padding: 10px 20px; /* Adjust padding as needed for button size */
   width: 213px;
-  font-size: 26px; 
-  background-color: #224780; 
-  color: #fff; 
+  font-size: 26px; /* Adjust font size as needed */
+  background-color: #224780; /* Button background color */
+  color: #fff; /* Button text color */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -74,45 +85,52 @@ input[type="file"] {
   margin-bottom: 20px;
 }
 #SubmitBtn:hover, #ResetBtn:hover {
-  background-color: #051d35; 
+  background-color: #051d35; /* Change background color on hover */
 }
-.enrolled-container {
-  margin-left: 30px;
+
+/*enrolled-container {
+  /*margin-left: 20px;
   margin-top: 26px;
-  width: 700px;
+  width: 300px;
   height:auto;
   padding-left: 20px;
 }
-#enrolledTable {
-  width: 100%;
-  margin-right: 10%;
+*/
+#enrolledTable{
+  width: 50%;
   border-collapse: collapse;
+  margin-left: 100px;
 }
+
 #enrolledTable th, #enrolledTable td {
   padding: 8px;
   border: 4px solid #131111;
-  margin: 0;
+  margin: 0px;
   text-align: left;
 }
 h1, h2 {
   font-size: 28px;
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
 }
 .enrolledTable img {
-  max-width: 50px;
-  max-height: 50px;
+  width: 20px;
+  height: 20px;
 }
+
+
 @media screen and (max-width: 700px) {
   .form-and-table-container {
-    flex-direction: column;
+    flex-direction: row; /* Stack elements in a column */
     align-items: center;
   }
+
   .RegistrationForm {
-    margin-right: 0; 
+    margin-right: 10px;
+    margin-left: 10;
   }
   .enrolled-container {
-    margin-top: 20;
     padding-right: 0; 
     width: 100%;
+    margin: left 40px;
   }
 }
