--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-  background: radial-gradient(260deg,#729ff3 27%,rgb(8, 103, 166) 40%,rgb(59, 59, 233) 50%);
-}
 h1{
   margin: 10px 10px;
   align-items: center;
@@ -57,10 +54,10 @@ input[type="file"] {
   margin: 10px;
 }
 #SubmitBtn{
-  padding: 10px 20px; /* Adjust padding as needed for button size */
+  padding: 10px 20px; 
   width: 210px;
-  font-size: 26px; /* Adjust font size as needed */
-  background-color: #224780; /* Button background color */
+  font-size: 26px; 
+  background-color: #224780; 
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -70,11 +67,11 @@ input[type="file"] {
   margin-bottom: 20px;
 }
 #ResetBtn{
-  padding: 10px 20px; /* Adjust padding as needed for button size */
+  padding: 10px 20px; 
   width: 210px;
-  font-size: 26px; /* Adjust font size as needed */
-  background-color: #224780; /* Button background color */
-  color: #fff; /* Button text color */
+  font-size: 26px; 
+  background-color: #224780; 
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -83,33 +80,19 @@ input[type="file"] {
   margin-bottom: 20px;
 }
 #SubmitBtn:hover, #ResetBtn:hover {
-  background-color: #051d35; /* Change background color on hover */
+  background-color: #051d35;
 }
-
-/*enrolled-container {
-  /*margin-left: 20px;
-  margin-top: 26px;
-  width: 300px;
-  height:auto;
-  padding-left: 20px;
-}
-*/
 #enrolledTable{
-  width: 60%;
+  width: 56%;
   border-collapse: collapse;
-  margin-left: 56px;
-  max-width: 50%;
+  margin-left: 48px;
+  max-width: 56%;
   height: max-content;
 }
-
 .description-cell {
-  width: 200px; /* Set the fixed width for the description cell */
+  width: 200px; 
   max-width: 590px;
- } /* Add a max-width to prevent overflow on small screens /
-  word-wrap: break-word; /* Allow long words to break and wrap within the container /
-  white-space: normal; /* Allow text to wrap within the container /
-}
-*/
+} 
 #enrolledTable th{
   width: auto;
   padding: 8px;
@@ -134,37 +117,33 @@ h1, h2 {
 }
 
 #enrolledTable td.description-cell {
-  width: 40%; /* Adjust the width as needed */
+  width: 40%;
 }
-
-/* Adjust the width of the image cell */
 #enrolledTable td.image-cell {
-  width: 40%; /* Adjust the width as needed */
-}
-
+  width: 40%; }
 #dlt{
   width:max-content;
 }
 .delete-button{
-  margin: 3px ;
+  margin-left: 300px ;
+  margin-bottom: 30px;
   background-color: #dd1616;
-  width: max-content;
-  height: 35px;
+  width: 88px;
+  height: 45px;
   font-weight: 500;
 }
 @media screen and (max-width: 700px) {
   .form-and-table-container {
-    flex-direction: row; /* Stack elements in a column */
+    flex-direction: row; 
     align-items: center;
   }
   .RegistrationForm {
     margin-right: 10px;
-    margin-left: 10; /* Remove right margin for small screens */
+    margin-left: 10; 
   }
   .enrolled-container {
-    /*margin-top: 20;*/
-    padding-right: 0; /* Remove top margin for small screens */
-    width: 68%;
-    margin-left:30px;
+    padding-right: 0; 
+    width: 55%;
+    margin-left:20px;
   }
 }
